# minetest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  minetest.sh  rebuild_minetest.sh  set-env.sh  toolchain.cmake  update.sh
builtin/: settingtypes.txt
builtin/client/: init.lua  register.lua
builtin/game/: chatcommands.lua  item.lua  misc.lua  register.lua
builtin/mainmenu/: dlg_settings_advanced.lua  init.lua  names.lua  tab_local.lua  tab_piper.lua
cmake/Modules/: FindDuktape.cmake  FindLuaSocket.cmake
doc/: client_lua_api.md  lua_api.txt
lib/duktape/: CMakeLists.txt
lib/jsoncpp/: jsoncpp.cpp
lib/luasocket/: CMakeLists.txt  luasocket.cpp  luasocket.h
src/: CMakeLists.txt  camera.cpp  camera.h  client.cpp  client.h  clientenvironment.cpp  content_cao.cpp  defaultsettings.cpp  game.cpp  gamedef.h  guiFormSpecMenu.cpp  guiFormSpecMenu.h  hud.cpp  keycode.h  localplayer.cpp  localplayer.h  mg_schematic.h  modchannels.cpp  mods.cpp  nodedef.cpp  object_properties.cpp  player.cpp  player.h  server.cpp  server.h  serverenvironment.cpp  tool.cpp
src/client/: clientlauncher.cpp  inputhandler.cpp  inputhandler.h  renderingengine.cpp  renderingengine.h
src/content/: mods.cpp
src/gui/: guiFormSpecMenu.cpp  guiFormSpecMenu.h  intlGUIEditBox.cpp  mainmenumanager.h
src/mapgen/: mapgen_carpathian.cpp  mg_schematic.cpp  mg_schematic.h
src/network/: clientopcodes.cpp  clientpackethandler.cpp  networkprotocol.h  serveropcodes.cpp  serverpackethandler.cpp
src/script/: scripting_client.cpp  scripting_server.cpp
src/script/cpp_api/: s_base.cpp  s_base.h  s_client.cpp  s_client.h  s_modchannels.cpp  s_modchannels.h  s_security.cpp  s_server.cpp  s_server.h
src/script/lua_api/: CMakeLists.txt  l_client.cpp  l_client.h  l_duktape.cpp  l_duktape.h  l_env.cpp  l_mapgen.cpp  l_mapgen.h  l_modchannels.cpp  l_modchannels.h  l_object.cpp  l_server.cpp  l_server.h  l_vmanip.cpp  l_vmanip.h
src/unittest/: test.cpp
src/util/: string.h
util/buildbot/: buildwin32.sh
util/travis/: before_install.sh  common.sh  script.sh  toolchain_raspbian.cmake
